--- a/Flashy/Base.lproj/Main.storyboard
+++ b/Flashy/Base.lproj/Main.storyboard
@@ -402,13 +402,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Side 1" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="JXS-xo-Tfh">
-                                <rect key="frame" x="40" y="168" width="520" height="41"/>
-                                <color key="backgroundColor" red="0.027450980392156862" green="0.21176470588235294" blue="0.25882352941176467" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="textColor" red="0.57647058823529407" green="0.63137254901960782" blue="0.63137254901960782" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="30"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
-                            </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Side 2" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="hzs-ib-xe4">
                                 <rect key="frame" x="40" y="219" width="520" height="41"/>
                                 <color key="backgroundColor" red="0.027450980390000001" green="0.21176470589999999" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -417,57 +410,37 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                             <stackView autoresizesSubviews="NO" opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="7iO-Ay-rPQ">
-                                <rect key="frame" x="40" y="540" width="520" height="40"/>
+                                <rect key="frame" x="40" y="533" width="520" height="47"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9iQ-vy-JMK">
-                                        <rect key="frame" x="0.0" y="0.0" width="255" height="40"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="166.5" height="47"/>
                                         <color key="backgroundColor" red="0.027450980390000001" green="0.21176470589999999" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="25"/>
                                         <color key="tintColor" red="0.57647058819999997" green="0.63137254899999995" blue="0.63137254899999995" alpha="1" colorSpace="calibratedRGB"/>
-                                        <state key="normal" title="Previous"/>
+                                        <state key="normal" title="Prev"/>
                                         <connections>
                                             <action selector="previousAction" destination="3gY-gZ-Mij" eventType="touchUpInside" id="tfU-1t-fmD"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CvU-8h-mKP">
-                                        <rect key="frame" x="265" y="0.0" width="255" height="40"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hIA-6K-XOq">
+                                        <rect key="frame" x="176" y="0.0" width="167" height="47"/>
                                         <color key="backgroundColor" red="0.027450980390000001" green="0.21176470589999999" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="grd-WE-cMV"/>
-                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="25"/>
+                                        <color key="tintColor" red="0.57647058819999997" green="0.63137254899999995" blue="0.63137254899999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="Done"/>
+                                        <connections>
+                                            <action selector="doneAction" destination="3gY-gZ-Mij" eventType="touchUpInside" id="kUv-Kp-ZUr"/>
+                                            <action selector="nextAction" destination="3gY-gZ-Mij" eventType="touchUpInside" id="YBf-z1-m9Z"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CvU-8h-mKP">
+                                        <rect key="frame" x="353" y="0.0" width="166.5" height="47"/>
+                                        <color key="backgroundColor" red="0.027450980390000001" green="0.21176470589999999" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="25"/>
                                         <color key="tintColor" red="0.57647058819999997" green="0.63137254899999995" blue="0.63137254899999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <state key="normal" title="Next"/>
                                         <connections>
                                             <action selector="nextAction" destination="3gY-gZ-Mij" eventType="touchUpInside" id="1Ra-Vy-g3h"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                            </stackView>
-                            <stackView autoresizesSubviews="NO" opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="bct-gS-Fk0">
-                                <rect key="frame" x="40" y="490" width="520" height="40"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MFH-eI-ooK">
-                                        <rect key="frame" x="0.0" y="0.0" width="255" height="40"/>
-                                        <color key="backgroundColor" red="0.027450980390000001" green="0.21176470589999999" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="25"/>
-                                        <color key="tintColor" red="0.57647058819999997" green="0.63137254899999995" blue="0.63137254899999995" alpha="1" colorSpace="calibratedRGB"/>
-                                        <state key="normal" title="Save and quit"/>
-                                        <connections>
-                                            <action selector="saveQuitAction" destination="3gY-gZ-Mij" eventType="touchUpInside" id="Ife-aM-VPD"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A84-We-IDj">
-                                        <rect key="frame" x="265" y="0.0" width="255" height="40"/>
-                                        <color key="backgroundColor" red="0.027450980390000001" green="0.21176470589999999" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="rlc-om-GBi"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="25"/>
-                                        <color key="tintColor" red="0.57647058819999997" green="0.63137254899999995" blue="0.63137254899999995" alpha="1" colorSpace="calibratedRGB"/>
-                                        <state key="normal" title="Quit without saving"/>
-                                        <connections>
-                                            <action selector="quitOnlyAction" destination="3gY-gZ-Mij" eventType="touchUpInside" id="Etu-gv-Ypv"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -487,33 +460,37 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Card ##" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="wnk-d3-2Je">
-                                <rect key="frame" x="250" y="445.5" width="100" height="34.5"/>
+                                <rect key="frame" x="250" y="478" width="100" height="40"/>
                                 <color key="backgroundColor" red="0.027450980390000001" green="0.21176470589999999" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="2Xf-ND-GaF"/>
                                     <constraint firstAttribute="width" constant="100" id="BK1-oI-C3J"/>
+                                    <constraint firstAttribute="height" constant="40" id="yea-T1-G1a"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="25"/>
                                 <color key="textColor" red="0.14901960780000001" green="0.5450980392" blue="0.82352941180000006" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Side 1" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="JXS-xo-Tfh">
+                                <rect key="frame" x="40" y="168" width="520" height="41"/>
+                                <color key="backgroundColor" red="0.027450980392156862" green="0.21176470588235294" blue="0.25882352941176467" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.57647058823529407" green="0.63137254901960782" blue="0.63137254901960782" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="30"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.16862745098039217" blue="0.21176470588235294" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="JXS-xo-Tfh" secondAttribute="trailing" constant="20" id="4Un-v1-qLM"/>
                             <constraint firstItem="JXS-xo-Tfh" firstAttribute="top" secondItem="EL1-eK-IFi" secondAttribute="bottom" constant="15" id="8Ef-v0-et0"/>
-                            <constraint firstItem="bct-gS-Fk0" firstAttribute="top" secondItem="wnk-d3-2Je" secondAttribute="bottom" constant="10" id="CkL-mN-PXT"/>
                             <constraint firstItem="hzs-ib-xe4" firstAttribute="leading" secondItem="lnk-fT-0P0" secondAttribute="leadingMargin" constant="20" id="ETP-tG-xBI"/>
                             <constraint firstItem="JXS-xo-Tfh" firstAttribute="leading" secondItem="lnk-fT-0P0" secondAttribute="leadingMargin" constant="20" id="G48-Fn-6ee"/>
                             <constraint firstItem="KO3-IA-0hy" firstAttribute="top" secondItem="7iO-Ay-rPQ" secondAttribute="bottom" constant="20" id="GNU-pU-rXc"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Xmi-rx-TvH" secondAttribute="trailing" constant="20" id="LcB-PB-Fsi"/>
-                            <constraint firstItem="7iO-Ay-rPQ" firstAttribute="top" secondItem="bct-gS-Fk0" secondAttribute="bottom" constant="10" id="N1V-f4-yV9"/>
                             <constraint firstItem="EL1-eK-IFi" firstAttribute="top" secondItem="Xmi-rx-TvH" secondAttribute="bottom" constant="10" id="Rnw-tq-E3H"/>
                             <constraint firstItem="EL1-eK-IFi" firstAttribute="leading" secondItem="lnk-fT-0P0" secondAttribute="leadingMargin" constant="20" id="a1V-rJ-RLN"/>
                             <constraint firstItem="Xmi-rx-TvH" firstAttribute="leading" secondItem="lnk-fT-0P0" secondAttribute="leadingMargin" constant="20" id="jLn-iI-1Xi"/>
                             <constraint firstItem="hzs-ib-xe4" firstAttribute="top" secondItem="JXS-xo-Tfh" secondAttribute="bottom" constant="10" id="kuz-ny-Vjz"/>
-                            <constraint firstItem="bct-gS-Fk0" firstAttribute="leading" secondItem="lnk-fT-0P0" secondAttribute="leadingMargin" constant="20" id="lBz-iv-L3E"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="bct-gS-Fk0" secondAttribute="trailing" constant="20" id="mfa-5U-RUo"/>
+                            <constraint firstItem="7iO-Ay-rPQ" firstAttribute="top" secondItem="wnk-d3-2Je" secondAttribute="bottom" constant="15" id="pob-89-Ysz"/>
                             <constraint firstItem="7iO-Ay-rPQ" firstAttribute="leading" secondItem="lnk-fT-0P0" secondAttribute="leadingMargin" constant="20" id="rDf-CF-Cka"/>
                             <constraint firstAttribute="trailingMargin" secondItem="hzs-ib-xe4" secondAttribute="trailing" constant="20" id="rv3-YR-Hty"/>
                             <constraint firstItem="wnk-d3-2Je" firstAttribute="centerX" secondItem="lnk-fT-0P0" secondAttribute="centerX" id="uPA-ds-ms2"/>
@@ -527,12 +504,12 @@
                         <outlet property="cardNumberOutlet" destination="wnk-d3-2Je" id="SYU-5c-GCZ"/>
                         <outlet property="cardsetNameOutlet" destination="Xmi-rx-TvH" id="LsI-QW-2fQ"/>
                         <outlet property="cardsetShortOutlet" destination="EL1-eK-IFi" id="D7M-CL-lp3"/>
+                        <outlet property="doneOutlet" destination="hIA-6K-XOq" id="Qer-4X-d80"/>
                         <outlet property="nextOutlet" destination="CvU-8h-mKP" id="7gY-JP-g9Z"/>
                         <outlet property="previousOutlet" destination="9iQ-vy-JMK" id="noM-ib-8oT"/>
-                        <outlet property="quitOnlyOutlet" destination="A84-We-IDj" id="mN3-Fm-iK4"/>
-                        <outlet property="saveQuitOutlet" destination="MFH-eI-ooK" id="Osy-Fx-sIC"/>
                         <outlet property="sideOneOutlet" destination="JXS-xo-Tfh" id="d43-2M-yur"/>
                         <outlet property="sideTwoOutlet" destination="hzs-ib-xe4" id="cSc-nu-Iyi"/>
+                        <segue destination="xfv-tj-feU" kind="presentation" identifier="editorToMainSegue" modalTransitionStyle="crossDissolve" id="pEv-pm-gOD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lW8-xA-yFm" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -541,6 +518,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="y2o-8s-FHQ"/>
+        <segue reference="pEv-pm-gOD"/>
     </inferredMetricsTieBreakers>
 </document>
